--- a/.github/workflows/sonarcloud-scan.yml
+++ b/.github/workflows/sonarcloud-scan.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     name: Sonar
-    if: github.event.workflow_run.conclusion == 'success'
+#    if: github.event.workflow_run.conclusion == 'success'
     steps:
       - name: checkout
         uses: actions/checkout@v3
