--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,9 @@ jobs:
         working-directory: src
         run: yarn test --coverage
 
+      - name: run ls
+        run: ls
+
       - name: Upload code coverage reports
         uses: actions/upload-artifact@v2
         with:
