--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,8 @@ jobs:
       - name: Upload code coverage reports
         uses: actions/upload-artifact@v2
         with:
+          if-no-files-found: error
           name: code-coverage
           path: |
-            src/altinn-app-frontend/coverage/lcov.info
-            src/shared/coverage/lcov.info
+            ./*/src/altinn-app-frontend/coverage/lcov.info
+            ./*/src/shared/coverage/lcov.info
