--- a/.github/workflows/sonarcloud-scan.yml
+++ b/.github/workflows/sonarcloud-scan.yml
@@ -21,6 +21,13 @@ jobs:
 
       - name: run ls
         run: ls
+                
+      - name: print workflow
+        run: |
+          echo ${{ github.event.workflow_run.head_sha }}
+          echo ${{ github.event.workflow_run.pull_requests[0].number }}
+          echo ${{ github.event.workflow_run.pull_requests[0].head.ref }}
+          echo ${{ github.event.workflow_run.pull_requests[0].base.ref }}
 
       - name: 'Download artifact'
         uses: actions/github-script@v6
