--- a/.github/workflows/sonarcloud-scan.yml
+++ b/.github/workflows/sonarcloud-scan.yml
@@ -1,8 +1,9 @@
 name: SonarCloud Scan
 on:
-  workflow_dispatch:
   workflow_run:
     workflows: ['Build and run unit tests']
+    branches:
+      - '!main'
     types:
       - completed
 
